Correct gap setting

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -15,11 +15,12 @@ body {
   display: flex;
   align-items: center;
   padding: 8px;
+  gap: 16px;
 }
 
 .links{
   display: flex;
-  gap: 20px;
+  gap: 16px;
 }
 
 .notifications{
